add ref to exchange

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -17,6 +17,8 @@
           <li><a href="docs/0.2.0">0.2.0</a></li>
           <li><a href="docs/0.3.0">0.3.0</a></li>
         </ul>
+
+        <p>Check out <a href="https://awayto.exchange">Awayto.exchange</a>, which uses version 0.3.0.</p>
       </div>
 
       {{ partial "index.md" | markdownify }}
