--- a/assets/app.css
+++ b/assets/app.css
@@ -78,7 +78,7 @@ body {
   line-height: 1.8;
   color: var(--pro);
   word-break: break-word;
-  background-color: #azure;
+  background-color: azure;
   transition: background 0.4s ease-out;
 }
 
