--- a/assets/custom.css
+++ b/assets/custom.css
@@ -2,6 +2,8 @@
  -------------------------------------------------- */
 
 body {
+  background-color: #121212;
+  color: #fff;
   padding-left: unset;
   padding-right: unset;
 }
@@ -12,7 +14,7 @@ code {
 
 header {
   position: fixed !important;
-  background-color: #111;
+  background-color: #203040;
   height: 60px !important;
   z-index: 10;
 }
@@ -144,7 +146,6 @@ main {
 }
 
 .post-content p {
-  color: #333;
   margin-top: 20px;
 }
 
