--- a/layouts/index.html
+++ b/layouts/index.html
@@ -13,9 +13,9 @@
       <div class="section-header" id="awayto-dev-docs">
         <h1>Awayto Developer Documentation</h1>
         <ul>
-          <li><a href="docs/0.1.0">0.1.0</a></li>
-          <li><a href="docs/0.2.0">0.2.0</a></li>
-          <li><a href="docs/0.3.0">0.3.0</a></li>
+          <li><a href="docs/0.3.0">0.3.0</a> Latest</li>
+          <li><a href="docs/0.2.0">0.2.0</a> <em>deprecated</em></li>
+          <li><a href="docs/0.1.0">0.1.0</a> <em>deprecated</em></li>
         </ul>
 
         <p>Check out <a href="https://awayto.exchange">Awayto.exchange</a>, which uses version 0.3.0.</p>
